--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gqw",
   "description": "🏷️ Type-safe Github API Wrapper",
+  "version": "0.0.1",
   "scripts": {
     "dev": "ts-node-dev --transpile-only ./examples/basic/src/index.ts"
   },
