--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,21 @@
 {
-  "compilerOptions": {
-    "lib": ["ES2020"],
-    "outDir": "dist",
-    "rootDir": "src",
-    "esModuleInterop": true,
-  },
-  "include": ["src/**/*.ts"],
+	"include": ["src"],
+	"compilerOptions": {
+		"module": "esnext",
+		"lib": ["dom", "esnext"],
+		"importHelpers": true,
+		"declaration": true,
+		"sourceMap": true,
+		"rootDir": "./src",
+		"strict": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": true
+	}
 }
