--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "gqw",
   "description": "🏷️ Type-safe Github API Wrapper",
-  "version": "0.0.4",
+  "version": "0.0.5",
+  "license": "MIT",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsup src --minify"
   },
@@ -15,7 +17,8 @@
     "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6"
+    "@types/node": "^16.11.6",
+    "@types/node-fetch": "^3.0.3"
   },
   "keywords": [
     "github",
