--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,15 @@
 {
-	"include": ["src"],
 	"compilerOptions": {
-		"module": "esnext",
-		"lib": ["dom", "esnext"],
-		"importHelpers": true,
-		"declaration": true,
+		"module": "commonjs",
+		"target": "es6",
 		"sourceMap": true,
-		"rootDir": "./src",
-		"strict": true,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"moduleResolution": "node",
 		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"noEmit": true
-	}
+		"outDir": "dist",
+		"declaration": true,
+		"declarationMap": true,
+		"moduleResolution": "node",
+		"strict": true
+	},
+  "include": ["src"],
+	"exclude": ["node_modules", "dist"]
 }
